@@ -307,3 +307,5 @@ GW_DEFAULT["ACTIVE_PROFILE"] = nil
 GW_DEFAULT["PLAYER_AURA_WRAP_NUM"] = 7
 GW_DEFAULT["PLAYER_ENERGY_MANA_TICK"] = true
 GW_DEFAULT["PLAYER_5SR_TIMER"] = true
+GW_DEFAULT["PlayerBuffFrame_ICON_SIZE"] = 32
+GW_DEFAULT["PlayerDebuffFrame_ICON_SIZE"] = 32
